--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "webpack -w --mode=development",
     "production": "webpack --mode=production",
-    "dev": "webpack serve --open --mode=development"
+    "dev": "webpack serve --open --mode=development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -27,10 +29,12 @@
     "eslint-config-tui": "^4.1.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "homepage": ""
 }
