--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "bundle": "webpack -w --mode=development",
     "production": "webpack --mode=production",
     "dev": "webpack serve --open --mode=development",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run production",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/seonjakim/youtube_clone/issues"
   },
-  "homepage": "https://github.com/seonjakim/youtube_clone#readme",
+  "homepage": "https://seonjakim.github.io/youtube_clone/",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
@@ -35,6 +35,5 @@
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
-  },
-  "homepage": ""
+  }
 }
