--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   },
   "homepage": "https://seonjakim.github.io/youtube_clone/",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-tui": "^4.1.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.4.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "2.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
